--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/uzairali19/mongoose-node#readme",
   "dependencies": {
-    "mongoose": "^5.1.7"
+    "express": "^4.17.1",
+    "mongodb": "^4.1.4",
+    "mongoose": "^4.13.21",
+    "mongoose-currency": "^0.2.0",
+    "morgan": "^1.10.0"
   }
 }
