--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "mongoose": "^4.13.21",
     "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.11.97"
   }
 }
