--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongodb": "^4.1.4",
     "mongoose": "^4.13.21",
     "mongoose-currency": "^0.2.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97"
