--- a/package.json
+++ b/package.json
@@ -1,38 +1,16 @@
 {
   "name": "mongoose-node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uzairali19/mongoose-node.git"
-  },
-  "author": "Uzair Ali",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/uzairali19/mongoose-node/issues"
-  },
-  "homepage": "https://github.com/uzairali19/mongoose-node#readme",
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.4",
-    "mongoose": "^4.13.21",
-    "mongoose-currency": "^0.2.0",
-    "morgan": "^1.10.0",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
-    "session-file-store": "^1.5.0"
-  },
-  "devDependencies": {
-    "@types/mongoose": "^5.11.97"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
