--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.4",
     "mongoose": "^4.13.21",
     "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "session-file-store": "^1.5.0",
-    "debug": "~2.6.9",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "multer": "^1.4.4"
+    "session-file-store": "^1.5.0"
   }
 }
